# rust-api-architecture-sample

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2022-05-29-153543_create_documents/: down.sql  up.sql
src/domains/: documents.rs  mod.rs
src/infrastructures/database/: schema.rs
src/infrastructures/databases/: schema.rs
src/infrastructures/repositories/: documents.rs
src/server/: handlers.rs  mod.rs  responses.rs
src/usecases/: documents.rs
