[package]
name = "rust-api-clean-architecture-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.9"
chrono = "0.4"
failure = "0.1.8"
